tests/expectations/compiler/finalize/finalize_incorrect_return_fail.out
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:10:1
     |
  10 | async fn finalize_mint_public(public receiver: address, public amount: u64) -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  11 |     Mapping::set(account, receiver, amount);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  12 |     return 1u8 + 2u8;
     |     ^^^^^^^^^^^^^^^^^
  13 | }
     | ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
Error [ETYC0372117]: Expected type `u64` but type `u8` was found.
    --> compiler-test:12:12
     |
  12 |     return 1u8 + 2u8;
     |            ^^^
Error [ETYC0372117]: Expected type `u64` but type `u8` was found.
    --> compiler-test:12:18
     |
  12 |     return 1u8 + 2u8;
     |                  ^^^
Error [ETYC0372117]: Expected type `u64` but type `u8` was found.
    --> compiler-test:12:12
     |
  12 |     return 1u8 + 2u8;
     |            ^^^^^^^^^
